--- a/undervisningsopgaver/02_js_DOM/04_append.html
+++ b/undervisningsopgaver/02_js_DOM/04_append.html
@@ -64,9 +64,9 @@
 
     <main>
         <h2>Undertitle</h2>
-        <section >
+        <section id="section_article">
           
-            <article id="section_article">
+            <article >
                 <img src="" alt="image">
                     <h3></h3>
                     <p></p>            
@@ -99,7 +99,7 @@
         // const article2title =document.querySelector("article:nth-child(2) h3 " )
         // const article2txt =document.querySelector("article:nth-child(2) p" )
 
-        const newElement =document.createElement("newArticle")
+        const newElement =document.createElement("article")
      
 
         const footer = document.querySelector("footer h3") 
