personliste filter troende

--- a/undervisningsopgaver/bistro_babushka/index.html
+++ b/undervisningsopgaver/bistro_babushka/index.html
@@ -23,8 +23,12 @@
         <img src="" alt="" />
         <div>
           <h2></h2>
-          <p class="kategori"></p>
-          <p class="tekst"></p>
+          <!-- <p class="kategori">
+            Mad kategori:
+          </p> -->
+          <p class="tekst">
+            Kort beskrivelse :
+          </p>
           <p class="pris">Pris:</p>
         </div>
       </article>
