--- a/undervisningsopgaver/bistro_babushka/bistro.html
+++ b/undervisningsopgaver/bistro_babushka/bistro.html
@@ -22,14 +22,14 @@
       <article>
         <img src="" alt="" />
         <div>
-          <h2></h2>
-          <!-- <p class="kategori">
-            Mad kategori:
-          </p> -->
+          <h2 class="menu"></h2>
+
           <p class="tekst">
             Kort beskrivelse :
           </p>
-          <p class="pris">Pris:</p>
+          <p class="pris">
+            Pris: <span></span>
+          </p>
           <p class="kategori"></p>
         </div>
       </article>
@@ -104,14 +104,15 @@
     <footer>
       <section>
         <address>
-          Addresse: <br />Grønnegade
-          97<br />1234 København K
+          Du kan finde os på:
+          <br />Grønnegade 97<br />1234
+          København K
         </address>
         <aside>
-          Åbningstider: <br />
-          Mandag – fredag 10:30 –
-          22:00<br />Lørdag 12:00 –
-          23:00
+          Vi har åbent: <br />
+          Mandag – fredag fra klokken
+          10:30 – 22:00<br />Lørdag fra
+          klokken 12:00 – 23:00
         </aside>
       </section>
     </footer>
